second page some func added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <div class="search-box">
             <input type="text" placeholder="search" class="search-bar"/>
             <button class="search-btn"><img src="img/searchsearch.png" alt="searchbtn"/></button>
+            <p style="padding: 10px; background: black; width: 30px; height: 30px; margin: 5px; border-radius: 50%; display: flex; align-items: center;"><i class="fa-solid fa-microphone" style="color: #ffffff;"></i></p>
+        
         </div>
         <div class="user-options">
             <img src="img/Vector.png" alt="" class="icon" style="height: 20px;" />
